--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,30 @@ top:1px;
   margin: 0;
 }
 .cover-image{
+position: relative;
+}
+.center {
+  position: absolute;
+  left: 0;
+  right: 50%;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  font-size: 48px;
+}
 
+.center p{
+  color: white;
+  font-size: 32px;
+  line-height: 2.8rem;
+}
+
+
+.cover-btn{
+  color: black;
+  margin-top: 1.8%;
+  background: rgb(254, 222, 105);
+  border-color:  rgb(254, 222, 105);;
 }
 
 /*****************************/
