setting up colors

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+/****************************/
+/*COLORS FOR THE SITE
+ #FEDE69 -Puppy Yellow
+ #9ED194 -Puppy Green
+ #FFE0A7 -Puppy Tan
+ #2E2E2D -Puppy Black
+*/
+/****************************/
+
+ #FEDE69 
+
+
+
 .outline {
   border: 2px solid black;
   padding-right: 175px;
