--- a/css/index.css
+++ b/css/index.css
@@ -32,8 +32,11 @@
   
   .cover-btn{
     color: black;
+    width: 10%;
+    font-size: 16px;
     margin-top: 1.8%;
     background: #9ED194;
+    border-radius: 50px;
     border-color:  #9ED194;
   }
   
@@ -57,8 +60,8 @@
   .take-action-btn{
     color: black !important;
     margin-top: 1.8%;
-    width: 30%;
-    font-size: 18px;
+    width: 15%;
+    font-size: 14px;
     border-radius: 50px;
     background: #9ED194;
     border-color:  #9ED194;
