--- a/css/index.css
+++ b/css/index.css
@@ -27,12 +27,14 @@
     color: white;
     font-size: 32px;
     line-height: 2.8rem;
+    padding: 0 5%;
+    margin: 1% 0;
   }
   
   
   .cover-btn{
     color: black;
-    width: 10%;
+    width: 15%;
     font-size: 16px;
     margin-top: 1.8%;
     background: #9ED194;
