--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,6 @@
   
   .center p{
     color: white;
-    font-size: 32px;
     line-height: 2.8rem;
     padding: 0 5%;
     margin: 1% 0;
@@ -203,15 +202,34 @@
   /********MEDIA QUERIES******/
   /***************************************/
   
-  @media only screen and (min-width: 300px) {
-   .content{
-     padding: 0 4%;
-   }
-   .masonry-head{
-     line-height: 2rem;
-   }
+  @media only screen and (min-width: 901px) {
+    .center p{
+      top: 0%;
+      font-size: 48px;
+      line-height: 2.8rem;
+      padding: 0 1%;
+    }
+    .cover-btn{
+      color: black;
+      width: 30%;
+      font-size: 16px;
+    }
+  }
+  @media only screen and (max-width: 900px) {
+    .center p{
+      top: 0%;
+      font-size: 21px;
+      line-height: 1.5rem;
+      padding: 0 1%;
+    }
+    .cover-btn{
+      color: black;
+      width: 30%;
+      font-size: 14px;
+    }
   }
   
+
   @media only screen and (min-width: 780px) {
     .content{
       padding: 0 4%;
@@ -219,6 +237,40 @@
     .masonry-head{
       line-height: 2rem;
     }
+  }
+  @media only screen and (max-width: 500px) {
+     .center p{
+       top: 0%;
+      font-size: 14px;
+      line-height: 1.5rem;
+      padding: 0 1%;
+      margin-top: -10px;
+    }
+    .cover-btn{
+      color: black;
+      width: 30%;
+      font-size: 10px;
+    }
+  }
+    @media only screen and (max-width: 407px) {
+        .center p{
+         top: 0%;
+         font-size: 12px;
+         line-height: 1.5rem;
+         padding: 0 1%;
+         margin-top: -10px;
+       }
+       .cover-btn{
+         color: black;
+         width: 30%;
+         font-size: 10px;
+       }
+     }
+    @media only screen and (min-width: 300px) {
+   .content{
+     padding: 0 4%;
    }
-
-   
+   .masonry-head{
+     line-height: 2rem;
+   }
+  }
