--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,27 @@
  #2E2E2D -Puppy Black
 */
 /****************************/
+
+h3, h4, h5, h6 {
+  font-family: Quicksand;
+  font-weight: 600;
+  font-size: 22px;
+}
+p, span {
+  font-family: Quicksand;
+  font-weight: 500;
+  font-size: 20px;
+  color: black;
+}
+.fa, .fab {
+  color: #FEDE69;
+}
+nav {
+  min-width: 100%;
+}
+.active {
+  text-decoration: underline;
+}
 .outline {
   border: 2px solid black;
   padding-right: 175px;
@@ -14,11 +35,11 @@
 
 }
 .grid {
-  max-width: 62%;
+  max-width: 66%;
   margin: 2px;
   padding: 4px;
   margin: auto;
-  background-color: #aeeb34;
+  background-color: #FFE0A7;
 }
 .margin {
   margin: auto;
@@ -29,33 +50,21 @@
 }
 
 legend {
-  font-size: 1.4em;
-  color: black;
-  font-weight: bold;
   text-align: center;
-  font-family: Verdana, Tahoma, sans-serif;
   padding-right: 10px;
   padding-left: 10px;
 }
-.legend {
-  color: black;
-  font-weight: bold;
-  text-align: left;
-  font-family: Verdana, Tahoma, sans-serif;
-  font-size: 1.1em;
-}
+
 .myButton {
 box-shadow: 0px 10px 14px -7px #3e7327;
 background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
-background-color:#77b55a;
+background-color:#9ED194;
 border-radius:4px;
 border:1px solid #4b8f29;
 display:inline-block;
 cursor:pointer;
 color:#ffffff;
-font-family: Verdana, Tahoma, sans-serif;
 font-size:16px;
-font-weight:bold;
 padding:6px 12px;
 text-decoration:none;
 text-shadow:0px 1px 0px #5b8a3c;
@@ -76,8 +85,7 @@ border-radius:5px;
 border:1px solid #566963;
 display:inline-block;
 cursor:pointer;
-  color:#ffffff;
-  font-family: Verdana, Tahoma, sans-serif;
+color:#ffffff;
 font-size:15px;
 font-weight:bold;
 padding:11px 23px;
@@ -94,7 +102,7 @@ top:1px;
 }
 .fieldset {
   border: 2px solid black;
-  font-family: Verdana, Tahoma, sans-serif;
+
 }
 .logo-img{
   margin-left: 8%;
@@ -113,4 +121,8 @@ top:1px;
 .sign-link:hover{
   color: rgb(254, 222, 105);
 }
-
+input, textarea {
+  border: 1.5px solid #9ED194;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+}
