--- a/css/index.css
+++ b/css/index.css
@@ -36,9 +36,7 @@
     width: 15%;
     font-size: 16px;
     margin-top: 1.8%;
-    background: #9ED194;
     border-radius: 50px;
-    border-color:  #9ED194;
   }
   
   /*****************************/
@@ -77,7 +75,9 @@
     padding: 7% 0;
     background:  #FEDE69;
   }
-  
+  .y-bg {
+    background: #FEDE69;
+  }
   
   
   
@@ -196,7 +196,7 @@
   /***************************************/
   
   
-  
+
   
   /***************************************/
   /********MEDIA QUERIES******/
