--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ nav {
   max-width: 25%;
 }
 .button {
-  max-width: 50%;
+  max-width: 40%;
 }
 
 legend {
@@ -65,7 +65,8 @@ display:inline-block;
 cursor:pointer;
 color:#ffffff;
 font-size:16px;
-padding:6px 12px;
+font-weight:bold;
+padding:6px 6px;
 text-decoration:none;
 text-shadow:0px 1px 0px #5b8a3c;
 }
@@ -78,28 +79,29 @@ position:relative;
 top:1px;
 }
 .myButton2 {
-box-shadow:inset 0px 1px 3px 0px #91b8b3;
-background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
-background-color:#768d87;
-border-radius:5px;
-border:1px solid #566963;
-display:inline-block;
-cursor:pointer;
-color:#ffffff;
-font-size:15px;
-font-weight:bold;
-padding:11px 23px;
-text-decoration:none;
-text-shadow:0px -1px 0px #2b665e;
+	box-shadow: 0px 10px 14px -7px #b8a45e;
+	background-color:#fede69;
+	display:inline-block;
+	cursor:pointer;
+	color:#000000;
+	font-size:16px;
+	font-weight:bold;
+	padding:6px 32px;
+	text-decoration:none;
+  text-shadow:0px 1px 0px #4f4523;
+  width: 30%;
+  margin-top: 1.8%;
+  border-radius: 50px;
 }
 .myButton2:hover {
-background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
-background-color:#6c7c7c;
+  background-color: rgb(238, 202, 74);
+  color: white;
 }
 .myButton2:active {
-position:relative;
-top:1px;
+	position:relative;
+	top:1px;
 }
+
 .fieldset {
   border: 2px solid black;
 
