changes, adding content to index.html

--- a/css/index.css
+++ b/css/index.css
@@ -78,8 +78,13 @@
     background:  #FEDE69;
   }
   
+  .puppy-pic-container{
+    margin: auto 0;
+  }
   
-  
+  .sad-puppy{
+    width: 100%;
+  }
   
   
   
@@ -257,7 +262,7 @@
          top: 0%;
          font-size: 12px;
          line-height: 1.5rem;
-         padding: 0 1%;
+         padding: 0 5%;
          margin-top: -10px;
        }
        .cover-btn{
