--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ nav {
   max-width: 25%;
 }
 .button {
-  max-width: 40%;
+  max-width: 50%;
 }
 
 legend {
@@ -68,8 +68,7 @@ display:inline-block;
 cursor:pointer;
 color:#ffffff;
 font-size:16px;
-font-weight:bold;
-padding:6px 6px;
+padding:6px 12px;
 text-decoration:none;
 text-shadow:0px 1px 0px #5b8a3c;
 }
@@ -82,29 +81,28 @@ position:relative;
 top:1px;
 }
 .myButton2 {
-	box-shadow: 0px 10px 14px -7px #b8a45e;
-	background-color:#fede69;
-	display:inline-block;
-	cursor:pointer;
-	color:#000000;
-	font-size:16px;
-	font-weight:bold;
-	padding:6px 32px;
-	text-decoration:none;
-  text-shadow:0px 1px 0px #4f4523;
-  width: 30%;
-  margin-top: 1.8%;
-  border-radius: 50px;
+box-shadow:inset 0px 1px 3px 0px #91b8b3;
+background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+background-color:#768d87;
+border-radius:5px;
+border:1px solid #566963;
+display:inline-block;
+cursor:pointer;
+color:#ffffff;
+font-size:15px;
+font-weight:bold;
+padding:11px 23px;
+text-decoration:none;
+text-shadow:0px -1px 0px #2b665e;
 }
 .myButton2:hover {
-  background-color: rgb(238, 202, 74);
-  color: white;
+background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+background-color:#6c7c7c;
 }
 .myButton2:active {
-	position:relative;
-	top:1px;
+position:relative;
+top:1px;
 }
-
 .fieldset {
   border: 2px solid black;
 
