--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ border-radius:4px;
 border:1px solid #4b8f29;
 display:inline-block;
 cursor:pointer;
-color:#ffffff;
+color:black;
 font-size:16px;
 padding:6px 12px;
 text-decoration:none;
@@ -80,28 +80,25 @@ background-color:#72b352;
 position:relative;
 top:1px;
 }
+
 .myButton2 {
-box-shadow:inset 0px 1px 3px 0px #91b8b3;
-background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
-background-color:#768d87;
-border-radius:5px;
-border:1px solid #566963;
-display:inline-block;
-cursor:pointer;
-color:#ffffff;
-font-size:15px;
-font-weight:bold;
-padding:11px 23px;
-text-decoration:none;
-text-shadow:0px -1px 0px #2b665e;
+	box-shadow: 0px 10px 14px -7px #423b22;
+	background-color:#fede69;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:black;
+	padding:8px 16px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #5c4f1f;
 }
 .myButton2:hover {
-background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
-background-color:#6c7c7c;
+  background-color:#dbbf5c;
+  color: white;
 }
 .myButton2:active {
-position:relative;
-top:1px;
+	position:relative;
+	top:1px;
 }
 .fieldset {
   border: 2px solid black;
