--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,7 @@ nav {
 
 }
 .grid {
-  max-width: 66%;
-  margin: 2px;
   padding: 4px;
-  margin: auto;
   background-color: #FFE0A7;
 }
 .margin {
@@ -53,7 +50,7 @@ nav {
 }
 
 legend {
-  text-align: center;
+
   padding-right: 10px;
   padding-left: 10px;
 }
@@ -68,7 +65,7 @@ display:inline-block;
 cursor:pointer;
 color:black;
 font-size:16px;
-padding:6px 12px;
+padding:8px 12px;
 text-decoration:none;
 text-shadow:0px 1px 0px #5b8a3c;
 }
@@ -125,4 +122,19 @@ input, textarea {
   border: 1.5px solid #9ED194;
   -webkit-border-radius: 8px;
   border-radius: 8px;
+}
+@media only screen and (min-width: 45em) { /*responsive*/
+  article {
+      float: left;
+      width: 45%;
+      margin-right: 0;
+  }
+  aside {
+      float: right;
+      width: 45%;
+      margin-left: 0;
+  }
+  footer {
+      clear: both;
+  }
 }
