updated masonry grid! index page complete!

--- a/css/index.css
+++ b/css/index.css
@@ -98,103 +98,63 @@ position: relative;
 /********STYLES FOR MASONRY GRID******/
 /***************************************/
 
-.custom-grid {
-  background: #ffffff;
-  padding-bottom: 7%;
+.masonry { /* Masonry container */
+  -webkit-column-count: 4;
+-moz-column-count:4;
+column-count: 4;
+-webkit-column-gap: 1em;
+-moz-column-gap: 1em;
+column-gap: 1em;
+ margin: 1em;
+  padding: 0;
+  -moz-column-gap: 1.5em;
+  -webkit-column-gap: 1.5em;
+  column-gap: 1em;
+  font-size: .85em;
+}
+.item {
+  display: inline-block;
+  background: #fff;
+  padding: .4em;
+  margin: 0 0 .5em;
+  width: 100%;
+
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-shadow: 2px 2px 4px 0 #ccc;
+}
+.item img{max-width:100%;}
+
+@media only screen and (max-width: 320px) {
+  .masonry {
+      -moz-column-count: 1;
+      -webkit-column-count: 1;
+      column-count: 1;
+  }
 }
 
-/* clear fix */
-.custom-grid:after {
-  content: '';
-  display: block;
-  clear: both;
+@media only screen and (min-width: 321px) and (max-width: 768px){
+  .masonry {
+      -moz-column-count: 2;
+      -webkit-column-count: 2;
+      column-count: 2;
+  }
 }
-
-/* ---- .grid-item ---- */
-.custom-grid .grid-sizer,
-.custom-grid .grid-item {
-  width: 33%;
-    margin-right: .33%;
-    margin-bottom: .33%;
+@media only screen and (min-width: 769px) and (max-width: 1200px){
+  .masonry {
+      -moz-column-count: 3;
+      -webkit-column-count: 3;
+      column-count: 3;
+  }
 }
-
-.custom-grid .grid-item {
-  float: left;
+@media only screen and (min-width: 1201px) {
+  .masonry {
+      -moz-column-count: 4;
+      -webkit-column-count: 4;
+      column-count: 4;
+  }
 }
-
-/*caption*/
-.custom-grid .grid-item {
-    position: relative;
-    overflow: hidden;
-}
-.custom-grid .grid-item .tag {
-    position: absolute;
-    top: 17px;
-    right: 10px;
-    padding: 5px 7px;
-    background: rgba(0, 0, 0, 0.65);
-    color: #ffffff;
-}
-.custom-grid .grid-item .caption {
-    position: absolute;
-    width: 100%;
-    visibility: visible;
-    bottom: 0px;
-    cursor: pointer;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-}
-.custom-grid .grid-item img {
-  display: block;
-  max-width: 100%;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-}
-.custom-grid .grid-item:hover .caption {
-    visibility: visible;
-    transform: translateY(-100px);
-    -webkit-transform: translateY(-100px);
-    -moz-transform: translateY(-100px);
-    -ms-transform: translateY(-100px);
-    -o-transform: translateY(-100px);
-}
-.custom-grid .grid-item:hover img {
-    opacity: 1;
-    transform: scale(1.1);
-}
-.custom-grid .grid-item img {
-    margin: 0px;
-    padding: 0px;
-    float: left;
-    z-index: 4;
-}
-.custom-grid .grid-item .blur {
-    background-color: #ffffff;
-    width: 100%;
-    height: 135px;
-    z-index: 5;
-    position: absolute;
-}
-.custom-grid .grid-item .caption-text h1 {
-    text-transform: uppercase;
-    font-size: 18px;
-}
-.custom-grid .grid-item .caption-text {
-    z-index: 10;
-    color: #000000;
-    position: absolute;
-    width: 100%;
-    height: 135px;
-    text-align: center;
-    top: 20px;
-}
-
 /***************************************/
 /********STYLES FOR MASONRY GRID******/
 /***************************************/
