--- a/css/index.css
+++ b/css/index.css
@@ -232,7 +232,7 @@ column-gap: 1em;
    }
   @media only screen and (min-width: 300px) {
  .content{
-   padding: 0 4%;
+   padding: 2% 4%;
  }
  .masonry-head{
    line-height: 2rem;
